--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<title>PILOTSHOP | PILOT SHOP</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="handlebars.js"></script>
+    <script src="demo.js" defer></script>
 </head>
 <body>
 	<header>
@@ -80,73 +83,73 @@
 			</div>
 		</article>
 	</section>
-	<section class="container">
+	<section class="container appendProducts">
 		<h1>FEATURED PRODUCTS</h1>
-		<article class="col-4">
-			<div class="product-image headset"></div>
-			<div class="product-description">
-				<p class="product-text-bold">akg aviation av100 anr headset</p>
-				<p class="product-text-normal ellipsis">When you deal with sky, you know that safety is above everything - you understand how important reliability of things is. </p>
-				<p class="product-cost">From<span class="current-price"> $66.00 </span><span class="old-price"> $76.00 </span></p>
-			</div>
-		</article>
-		<article class="col-4">
-			<div class="product-image flight-jacket"></div>
-			<div class="product-description">
-				<p class="product-text-bold">Alpha Industries Men's Cwu Pilot X Flight Jacket</p>
-				<p class="product-text-normal ellipsis">Whichever aircraft part you need, it’s listed here
-With this in mind, we do everything so the products related to aviation are perfect.Aircraft Parts category is subdivided into 5 smaller catogories: airframe parts, electrical, engine parts, landing gear, hardware. Whichever aircraft part you need, it’s listed here.Orders by 5 p.m. are delivered...</p>
-				<p class="product-cost"><span class="current-price"> $120.00</span></p>
-			</div>
-		</article>
-		<article class="col-4">
-			<div class="product-image aviator-shades"></div>
-			<div class="product-description">
-				<p class="product-text-bold">American Optical Original Pilot Eyewear 57mm Frame</p>
-				<p class="product-text-normal ellipsis">We serve pilots of all kinds of aircraft, starting from small jets to the biggest passenger planes. We have 6000+ items, and all of them are divided into categories: aircraft parts, pilot supplies, avionics & instrument. </p>
-				<p class="product-cost">From<span class="current-price"> $55.00 </span> <span class="old-price"> $65.00 </span></p>
-			</div>
-		</article>
-		<article class="col-4">
-			<div class="product-image instruments"></div>
-			<div class="product-description">
-				<p class="product-text-bold">Aspen Avionics Evolution</p>
-				<p class="product-text-normal ellipsis">Our store was created back in 1972 by Jim Sterling, a pilot who knew business inside out. During next 40 years a company of 4 people grew into 90 person team. </p>
-				<p class="product-cost"><span class="current-price">$150.00</span><span class="old-price"> $160.00 </span></p>
-			</div>
-		</article>
-		<article class="col-4">
-			<div class="product-image altimeter"></div>
-			<div class="product-description">
-				<p class="product-text-bold">Avidyne Ex5000 R8.0 Cirrus Multifunction Display</p>
-				<p class="product-text-normal ellipsis">Whichever aircraft part you need, it’s listed here. Orders by 5 p.m. are delivered same day. Apart from that, all kinds of possible accessories are offered in the store.</p>
-				<p class="product-cost"><span class="current-price">$90.00</span></p>
-			</div>
-		</article>
-		<article class="col-4">
-			<div class="product-image aviator-shades2"></div>
-			<div class="product-description">
-				<p class="product-text-bold">Cocoons Fitovers Polarized Sunglasses Pilot (Lg)</p>
-				<p class="product-text-normal ellipsis">We serve pilots of all kinds of aircraft, starting from small jets to the biggest passenger planes. We have 6000+ items, and all of them are divided into categories: aircraft parts, pilot supplies, avionics & instrument.</p>
-				<p class="product-cost">From<span class="current-price"> $90.00 </span><span class="old-price"> $100 .00 </span></p>
-			</div>
-		</article>
-		<article class="col-4">
-			<div class="product-image headset3"></div>
-			<div class="product-description">
-				<p class="product-text-bold">David Clark Dc X11p Panel Anr Enc Aviation Pilo...</p>
-				<p class="product-text-normal ellipsis">Our store was created back in 1972 by Jim Sterling, a pilot who knew business inside out. During next 40 years a company of 4 people grew into 90 person team. </p>
-				<p class="product-cost"><span class="current-price">$164.00</span><span class="old-price"> $170.00 </span></p>
-			</div>
-		</article>
-		<article class="col-4">
-			<div class="product-image garmin"></div>
-			<div class="product-description">
-				<p class="product-text-bold">Garmin Aera 796</p>
-				<p class="product-text-normal ellipsis">We care about our loyal ustomers and always are happy to see new ones, and we enjoy providing you with the best we can. </p>
-				<p class="product-cost"><span class="current-price">$112.00</span></p>
-			</div>
-		</article>
+		<!--<article class="col-4">-->
+			<!--<div class="product-image headset"></div>-->
+			<!--<div class="product-description">-->
+				<!--<p class="product-text-bold">akg aviation av100 anr headset</p>-->
+				<!--<p class="product-text-normal ellipsis">When you deal with sky, you know that safety is above everything - you understand how important reliability of things is. </p>-->
+				<!--<p class="product-cost">From<span class="current-price"> $66.00 </span><span class="old-price"> $76.00 </span></p>-->
+			<!--</div>-->
+		<!--</article>-->
+		<!--<article class="col-4">-->
+			<!--<div class="product-image flight-jacket"></div>-->
+			<!--<div class="product-description">-->
+				<!--<p class="product-text-bold">Alpha Industries Men's Cwu Pilot X Flight Jacket</p>-->
+				<!--<p class="product-text-normal ellipsis">Whichever aircraft part you need, it’s listed here-->
+<!--With this in mind, we do everything so the products related to aviation are perfect.Aircraft Parts category is subdivided into 5 smaller catogories: airframe parts, electrical, engine parts, landing gear, hardware. Whichever aircraft part you need, it’s listed here.Orders by 5 p.m. are delivered...</p>-->
+				<!--<p class="product-cost"><span class="current-price"> $120.00</span></p>-->
+			<!--</div>-->
+		<!--</article>-->
+		<!--<article class="col-4">-->
+			<!--<div class="product-image aviator-shades"></div>-->
+			<!--<div class="product-description">-->
+				<!--<p class="product-text-bold">American Optical Original Pilot Eyewear 57mm Frame</p>-->
+				<!--<p class="product-text-normal ellipsis">We serve pilots of all kinds of aircraft, starting from small jets to the biggest passenger planes. We have 6000+ items, and all of them are divided into categories: aircraft parts, pilot supplies, avionics & instrument. </p>-->
+				<!--<p class="product-cost">From<span class="current-price"> $55.00 </span> <span class="old-price"> $65.00 </span></p>-->
+			<!--</div>-->
+		<!--</article>-->
+		<!--<article class="col-4">-->
+			<!--<div class="product-image instruments"></div>-->
+			<!--<div class="product-description">-->
+				<!--<p class="product-text-bold">Aspen Avionics Evolution</p>-->
+				<!--<p class="product-text-normal ellipsis">Our store was created back in 1972 by Jim Sterling, a pilot who knew business inside out. During next 40 years a company of 4 people grew into 90 person team. </p>-->
+				<!--<p class="product-cost"><span class="current-price">$150.00</span><span class="old-price"> $160.00 </span></p>-->
+			<!--</div>-->
+		<!--</article>-->
+		<!--<article class="col-4">-->
+			<!--<div class="product-image altimeter"></div>-->
+			<!--<div class="product-description">-->
+				<!--<p class="product-text-bold">Avidyne Ex5000 R8.0 Cirrus Multifunction Display</p>-->
+				<!--<p class="product-text-normal ellipsis">Whichever aircraft part you need, it’s listed here. Orders by 5 p.m. are delivered same day. Apart from that, all kinds of possible accessories are offered in the store.</p>-->
+				<!--<p class="product-cost"><span class="current-price">$90.00</span></p>-->
+			<!--</div>-->
+		<!--</article>-->
+		<!--<article class="col-4">-->
+			<!--<div class="product-image aviator-shades2"></div>-->
+			<!--<div class="product-description">-->
+				<!--<p class="product-text-bold">Cocoons Fitovers Polarized Sunglasses Pilot (Lg)</p>-->
+				<!--<p class="product-text-normal ellipsis">We serve pilots of all kinds of aircraft, starting from small jets to the biggest passenger planes. We have 6000+ items, and all of them are divided into categories: aircraft parts, pilot supplies, avionics & instrument.</p>-->
+				<!--<p class="product-cost">From<span class="current-price"> $90.00 </span><span class="old-price"> $100 .00 </span></p>-->
+			<!--</div>-->
+		<!--</article>-->
+		<!--<article class="col-4">-->
+			<!--<div class="product-image headset3"></div>-->
+			<!--<div class="product-description">-->
+				<!--<p class="product-text-bold">David Clark Dc X11p Panel Anr Enc Aviation Pilo...</p>-->
+				<!--<p class="product-text-normal ellipsis">Our store was created back in 1972 by Jim Sterling, a pilot who knew business inside out. During next 40 years a company of 4 people grew into 90 person team. </p>-->
+				<!--<p class="product-cost"><span class="current-price">$164.00</span><span class="old-price"> $170.00 </span></p>-->
+			<!--</div>-->
+		<!--</article>-->
+		<!--<article class="col-4">-->
+			<!--<div class="product-image garmin"></div>-->
+			<!--<div class="product-description">-->
+				<!--<p class="product-text-bold">Garmin Aera 796</p>-->
+				<!--<p class="product-text-normal ellipsis">We care about our loyal ustomers and always are happy to see new ones, and we enjoy providing you with the best we can. </p>-->
+				<!--<p class="product-cost"><span class="current-price">$112.00</span></p>-->
+			<!--</div>-->
+		<!--</article>-->
 	</section>
 </body>
 </html>
